# Visual_SLAM_Gazebo

./: CMakeLists.txt  README.md  package.xml  rgbd_robot.urdf  simple_robot.urdf  stereo_robot.urdf
bags/support_robot/: metadata.yaml  rosbag2_2024_02_25-16_35_13_0.db3
bags/trajectory/: metadata.yaml
launch/: dynamic_monocular.launch.py  monocular.launch.py  monocular_lowlight.py  rgbd.launch.py  stereo.launch.py  waffle.launch.py  world.launch.py
src/: evaluate_ate_scale.py  plot_trajectory.py
urdf/: simple_robot.gazebo  simple_robot.urdf  simple_robot.xacro
worlds/: iscas_model.world  iscas_model_lowlight.world  iscas_model_lowtexture.world
