<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>article</name>
  <version>0.0.0</version>
  <description>Package to evaluate ORBSLAM3 in a indoor ambient
                using Gazebo and ros2 humble.</description>
  <maintainer email="renataraffaine@gmail.com">Renata Raffaine Villegas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
